--- a/form/index.html
+++ b/form/index.html
@@ -3,66 +3,103 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Volunteer Signup</title>
+  <title>Volunteer Submission Form</title>
 </head>
 <body>
-  <h1>Volunteer Signup Form</h1>
+  <h1>Volunteer Availability Form</h1>
   <form id="volunteer-form">
-    <label for="name">Full Name:</label><br />
-    <input type="text" id="name" name="name" required /><br /><br />
-
-    <label for="phone">Phone Number (with country code):</label><br />
-    <input type="tel" id="phone" name="phone" required /><br /><br />
-
-    <label for="shifts">Shifts (JSON format):</label><br />
-    <textarea id="shifts" name="shifts" rows="6" required placeholder='[{"date":"2025-07-07","time":"18:00","role":"Usher"}]'></textarea><br /><br />
-
+    <label>Name: <input type="text" name="name" required /></label><br />
+    <label>Phone: <input type="tel" name="phone" required /></label><br />
     <label>
-      <input type="checkbox" id="notify" name="notify" checked />
-      Send SMS Reminder Notification
-    </label><br /><br />
-
+      Notify via SMS?
+      <input type="checkbox" name="notify_sms" />
+    </label><br />
+    <fieldset id="shifts-fieldset">
+      <legend>Shifts (add multiple)</legend>
+      <div class="shift">
+        <label>Date: <input type="date" name="shift_date" required /></label>
+        <label>Time: <input type="time" name="shift_time" required /></label>
+        <label>Role:
+          <select name="shift_role" required>
+            <option value="Usher">Usher</option>
+            <option value="Greeter">Greeter</option>
+            <option value="Reader">Reader</option>
+            <!-- Add more roles here -->
+          </select>
+        </label>
+      </div>
+    </fieldset>
+    <button type="button" onclick="addShift()">Add Another Shift</button><br /><br />
     <button type="submit">Submit</button>
   </form>
 
-  <p id="status"></p>
-
   <script>
-    const form = document.getElementById('volunteer-form');
-    const status = document.getElementById('status');
+    function addShift() {
+      const container = document.getElementById('shifts-fieldset');
+      const div = document.createElement('div');
+      div.className = 'shift';
+      div.innerHTML = `
+        <label>Date: <input type="date" name="shift_date" required></label>
+        <label>Time: <input type="time" name="shift_time" required></label>
+        <label>Role:
+          <select name="shift_role" required>
+            <option value="Usher">Usher</option>
+            <option value="Greeter">Greeter</option>
+            <option value="Reader">Reader</option>
+          </select>
+        </label>
+        <button type="button" onclick="this.parentNode.remove()">Remove</button>
+      `;
+      container.appendChild(div);
+    }
 
-    form.addEventListener('submit', async e => {
+    document.getElementById('volunteer-form').addEventListener('submit', async function(e) {
       e.preventDefault();
 
-      const name = form.name.value.trim();
-      const phone = form.phone.value.trim();
-      const shifts = form.shifts.value.trim();
-      const notify = form.notify.checked;
+      const name = this.name.value.trim();
+      const phone = this.phone.value.trim();
+      const notify_sms = this.notify_sms.checked;
 
-      try {
-        JSON.parse(shifts); // validate JSON
-      } catch {
-        status.textContent = "Shifts JSON is invalid.";
+      const shifts = [];
+      const shiftDivs = this.querySelectorAll('.shift');
+      shiftDivs.forEach(div => {
+        const date = div.querySelector('input[name="shift_date"]').value;
+        const time = div.querySelector('input[name="shift_time"]').value;
+        const role = div.querySelector('select[name="shift_role"]').value;
+        if (date && time && role) {
+          shifts.push({ date, time, role });
+        }
+      });
+
+      if (!name || !phone || shifts.length === 0) {
+        alert('Please fill out all fields and add at least one shift.');
         return;
       }
 
-      // Call GitHub API to dispatch workflow (you need to provide a PAT with repo permissions)
-      // For demo, this just logs
-      status.textContent = "Submission received. Processing...";
-
-      // TODO: Replace with actual GitHub Actions API call or your server endpoint
-      console.log({
+      // Prepare submission payload
+      const payload = {
         name,
         phone,
         shifts,
-        notify,
-      });
+        notify_sms
+      };
 
-      // Simple demo success:
-      setTimeout(() => {
-        status.textContent = "Thank you for submitting your availability!";
-        form.reset();
-      }, 1500);
+      try {
+        // TODO: Replace with your GitHub API workflow trigger or backend endpoint
+        // This example just logs data
+        console.log('Submission payload:', payload);
+        alert('Submission received! The team will process your availability.');
+
+        // Clear form
+        this.reset();
+        // Remove extra shifts except one
+        const container = document.getElementById('shifts-fieldset');
+        while (container.children.length > 1) container.lastChild.remove();
+
+      } catch (err) {
+        alert('Submission failed. Please try again.');
+        console.error(err);
+      }
     });
   </script>
 </body>
